syntax = "proto3";

package protodb.database;

message CreateDatabaseRequest {
    string name = 1;
}

message CreateDatabaseResponse {
    enum ErrorCode {
        NO_ERROR = 0;
        INTERNAL_ERROR = 1;
        DATABASE_EXISTS = 2;
    }
    ErrorCode error_code = 1;
}