syntax = "proto3";

package protodb.database;

message ListDatabasesRequest {
}

message ListDatabasesResponse {
    enum ErrorCode {
        NO_ERROR = 0;
        INTERNAL_ERROR = 1;
    }
    ErrorCode error_code = 1;

    repeated string databases = 2;
}